fixed error messages not showing

--- a/website/app/styles/createAd.css
+++ b/website/app/styles/createAd.css
@@ -3,41 +3,20 @@
 }
 
 #createAd .row {
-  border-top: 2px solid rgba(228, 228, 228, 1);
+  border-top: 1px solid rgba(228, 228, 228, 1);
   padding: 30px 0px;
 }
 
-#createAd .form {
+#createAd .form, #createAd select {
   border-color: rgba(228, 228, 228, 1);
-  border-width: 0px 0px 2px 0px;
+  border-width: 0px 0px 1px 0px;
   background: rgba(106, 106, 106, 1);
   outline: none;
   width: 100%;
   color: rgba(228, 228, 228, 1);
-
 }
-
-#createAd .dropdown-toggle {
-  width: 100%;
-  text-align: left;
-}
-#createAd .dropdown-toggle p{
-  border-bottom: 2px solid rgba(228, 228, 228, 1);
-  width: 100%;
-  margin-bottom: 15px;
-}
-#createAd .dropdown-toggle p i{
-  float: right;
-}
-
-#createAd ul {
-  width: 100%;
-  padding: 10px;
-
-}
-
-#createAd ul input[type="radio"]:checked {
-  background: orange;
+#createAd select{
+  margin-bottom: 10px;
 }
 
 .form-group .col-xs-6{
@@ -45,9 +24,10 @@
   margin-top: 30px;
 }
 .form-group .col-xs-6 button{
-  border:  2px solid rgba(228, 228, 228, 1);
+  border:  1px solid rgba(228, 228, 228, 1);
   border-radius: 30px;
   padding: 5px 10px;
+  color: rgba(228, 228, 228, 1);
 }
 
 
